--- a/task7.html
+++ b/task7.html
@@ -1,37 +1,142 @@
-<form action="action_page.php">
-  <div class="container">
-    <hr>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Bootstrap Boxes</title>
+        <!-- Bootstrap CSS -->
+        <link
+            rel="stylesheet"
+            href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        />
+        <style>
+            .main {
+                margin: 100px;
+            }
 
-    <label for="fullname"><b>Full Name: </b></label>
-    <input type="text" placeholder=" Vincient Maverick Durano" name="fname" id="fname" required>
-<br> <br>
-<label for="Username"><b> Username: </b></label>
-    <input type="text" placeholder=" Vinz" name="Uname" id="Uname" required>
-<br> <br>
+            .line {
+                width: 100%;
+                border: 1px solid;
+            }
 
-    <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="********" name="psw" id="psw" required>
-<br> <br>
+            .box {
+                border: 1px solid #ccc;
+                border-radius: 5px;
+                padding: 20px;
+                margin-bottom: 20px;
+            }
 
-    <label for="psw-repeat"><b>Re Password</b></label>
-    <input type="password" placeholder="********" name="psw-repeat" id="psw-repeat" required>
-<br> <br>
+            .box img {
+                max-width: 100%;
+            }
 
-<label for="Address"><b>Address:</b></label>
-    <input type="text" placeholder="Cebu,Philippines" name="address" id="address" required>
-<br> <br>
-<label for="Age"><b>Age: </b></label>
-    <input type="text" placeholder="22" name="age" id="age" required>
-<br> <br>
-<label> <b> Gender:</b></label>  
-<select>  
-<option value="Male"> Male</option>  
-<option value="Female">Female</option>     
-</select>  
-  <br> <br>
-    
-<button type="submit" class="registerbtn">Save</button>
-  </div>
+            .box-info {
+                margin-bottom: 10px;
+            }
 
-  
-</form>
+            .box-line {
+                border-top: 1px solid #ccc;
+                margin: 20px 0;
+            }
+
+            .box-buttons {
+                display: flex;
+                justify-content: space-between;
+                padding-bottom: 100px;
+            }
+
+            .box-buttons button {
+                padding: 10px 20px;
+                border: none;
+                background-color: #c4e242;
+                color: #fff;
+                border-radius: 5px;
+            }
+        </style>
+    </head>
+
+    <body>
+        <div class="main">
+            <hr class="line" />
+            <div class="row">
+                <div class="col-sm-3">
+                    <div class="box">
+                        <img
+                            src="https://via.placeholder.com/300"
+                            alt="Picture"
+                        />
+                        <div class="box-info">
+                            <p>
+                                Cards for display in portfolio style material design by Google.
+                            </p>
+                        </div>
+                        <hr class="box-line" />
+                        <div class="box-buttons">
+                            <button>LINK</button>
+                            <button>LINK</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="box">
+                        <img
+                            src="https://via.placeholder.com/300"
+                            alt="Picture"
+                        />
+                        <div class="box-info">
+                            <p>
+                                 Cards for display in portfolio style material design by Google.
+                            </p>
+                        </div>
+                        <hr class="box-line" />
+                        <div class="box-buttons">
+                            <button>LINK</button>
+                            <button>LINK</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="box">
+                        <img
+                            src="https://via.placeholder.com/300"
+                            alt="Picture"
+                        />
+                        <div class="box-info">
+                            <p>
+                                 Cards for display in portfolio style material design by Google.
+                            </p>
+                        </div>
+                        <hr class="box-line" />
+                        <div class="box-buttons">
+                            <button>LINK</button>
+                            <button>LINK</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="box">
+                        <img
+                            src="https://via.placeholder.com/300"
+                            alt="Picture"
+                        />
+                        <div class="box-info">
+                            <p>
+                                 Cards for display in portfolio style material design by Google.
+                            </p>
+                        </div>
+                        <hr class="box-line" />
+                        <div class="box-buttons">
+                            <button>LINK</button>
+                            <button>LINK</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    </body>
+</html>
