--- a/task2.html
+++ b/task2.html
@@ -1,91 +1,44 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Document</title>
-  <link rel="stylesheet" type="text/css" href="comment.css">
-</head>
 <style>
-    .comment{
-    padding : 0px ;
-
+th, td {
+  border: 1px solid black;
+  border-radius: 11px;
 }
-.log{
-    padding: 100px;
+table {
+  width: 100%;    
+  background-color: powderblue;
 }
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-  }
-  
-  header, nav, main, footer {
-    padding: 20px;
-  }
-  
-  /* Header styles */
-  header {
-    background-color: #f2f2f2;
-  }
-  
-  /* Navigation styles */
-  nav ul {
-    list-style-type: none;
-    padding: 0;
-  }
-  
-  nav ul li {
-    display: inline;
-    margin-right: 10px;
-  }
-  
-  nav ul li a {
-    text-decoration: none;
-    color: #333;
-  }
-  
-  /* Main content styles */
-  section {
-    margin-bottom: 5px;
-  }
-  
-  h1 {
-    color: #333;
-    background-color:	#ADD8E6 ;
-  }
-  
-  #login-section {
-    max-width: 300px;
-    margin: 0 0 0 1000px;
-    /* padding-right: ; */
-  }
 
 </style>
+</head>
 <body>
-  <header>
-    <h1>Ethnus layout</h1>
-  </header>
-  
-  <nav>
-    <ul>
-      <li><a href="#">Home</a></li>
-    
-      <li><a href="#">Menu</a></li>
-    <li><a href="#">About</a></li>
-      <li><a href="#">Contact</a></li>
+
+<table style="width:100%">
  
-    </ul>
-  </nav>
-  
-  <main>
-    <section>
-      <h2></h2>
-      <p class="comment">Write your content here </p>
-    </section>
-    
-    </main>
-  
-  <footer>
-    <p></p>
-  </footer>
+  <tr>
+    <th>Firstname</th>
+    <th>Lastname</th> 
+    <th>Age</th>
+  </tr>
+  <tr>
+    <td>Jill</td>
+    <td>Smith</td>
+    <td>50</td>
+  </tr>
+  <tr>
+    <td>Eve</td>
+    <td>Jackson</td>
+    <td>94</td>
+  </tr>
+  <tr>
+    <td>John</td>
+    <td>Doe</td>
+    <td>80</td>
+  </tr>
+</table>
+
 </body>
 </html>
+
