--- a/task1.html
+++ b/task1.html
@@ -1,55 +1,44 @@
-
 <!DOCTYPE html>
 <html>
-
 <head>
-    <title>Cell Table</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <style>
-        .cell {
-            border: 2px solid red;
-            background-color: green;
-            color: white;
-            text-align: center;
-        }
-    </style>
+<style>
+table, th, td {
+  border: 1px solid white;
+  border-collapse: collapse;
+}
+th, td {
+  padding: 5px;
+  text-align: left;
+}
+table {
+  width: 100%;    
+  background-color: powderblue;
+}
+</style>
 </head>
-
 <body>
 
-    <div class="container mt-5">
-        <table class="table">
-            <tbody>
-                <tr>
-                    <td class="cell" colspan="1">Span 1</td>
-                    <td class="cell" colspan="1">Span 2</td>
-                    <td class="cell" colspan="1">Span 3</td>
-                    <td class="cell" colspan="1">Span 4</td>
-                    <td class="cell" colspan="1">Span 5</td>
-                    <td class="cell" colspan="1">Span 6</td>
-                    <td class="cell" colspan="1">Span 7</td>
-                    <td class="cell" colspan="1">Span 8</td>
-                    <td class="cell" colspan="1">Span 9</td>
-                    <td class="cell" colspan="1">Span 10</td>
-                    <td class="cell" colspan="1">Span 11</td>
-                    <td class="cell" colspan="1">Span 12</td>
-                </tr>
-                <tr>
-                    <td class="cell" colspan="4">Span 4</td>
-                    <td class="cell" colspan="4">Span 4</td>
-                    <td class="cell" colspan="4">Span 4</td>
-                </tr>
-                <tr>
-                    <td class="cell" colspan="4">Span 4</td>
-                    <td class="cell" colspan="8">Span 8</td>
-                </tr>
-                <tr>
-                    <td class="cell" colspan="12">Span 12</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-
-</body>
-
+<table style="width:100%">
+  <tr>
+    <th>Firstname</th>
+    <th>Lastname</th> 
+    <th>Age</th>
+  </tr>
+  <tr>
+    <td>Jill</td>
+    <td>Smith</td>
+    <td>50</td>
+  </tr>
+  <tr>
+    <td>Eve</td>
+    <td>Jackson</td>
+    <td>94</td>
+  </tr>
+  <tr>
+    <td>John</td>
+    <td>Doe</td>
+    <td>80</td>
+  </tr>
+</table>
+</head>
 </html>
